# aidsoid_photo_organiser

./: .gitignore  AGENTS.md  COMMERCIAL_LICENSE  CONTRIBUTING  COPYRIGHT  Makefile  README.md  THIRD_PARTY_LICENSES  pyproject.toml
docs/: architecture.md  code-style.md  development.md  security.md  testing.md
src/aidsoid_photo_organiser/: __init__.py  configure_logger.py  constants.py  count_files.py  file_operations.py  main.py  replicate_files.py  set_file_timestamps.py
src/aidsoid_photo_organiser/detect_taken_time/: __init__.py  detect_taken_time.py  get_date_from_exif.py  get_date_from_ffprobe.py  get_date_from_filename.py  get_date_from_heic.py  get_date_from_json.py  get_date_from_mkv.py  get_date_from_mp4_atoms.py  get_date_from_png.py
tests/: __init__.py  test_compare_directories_perf.py  test_file_operations.py  test_process_files.py  test_set_file_timestamps.py
tests/detect_taken_time/: __init__.py  test_detect_taken_time.py  test_get_date_from_exif.py  test_get_date_from_ffprobe.py  test_get_date_from_filename.py  test_get_date_from_heic.py  test_get_date_from_json.py  test_get_date_from_mkv.py  test_get_date_from_mp4_atoms.py  test_get_date_from_png.py
tests/files/: VID_20131229_223028.mkv  heic_with_exif_no_date.heic  heic_without_exif.heic  heif_with_exif.heif  m4v_with_creation_time.m4v  m4v_without_creation_time.m4v  mkv_with_creation_time.mkv  mov_with_creation_time.mov  mov_without_creation_time.mov  readme.md
